@@ -30,6 +30,8 @@ import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLStreamHandler;
 import java.util.ArrayList;
@@ -1021,7 +1023,6 @@ public final class Resources {
         return MISSING_METADATA_MARKER;
     }
 
-    @SuppressWarnings("deprecation")
     private static URL createURL(String loaderKey, Module module, String resourceName, int rootId) {
         if (JavaNetSubstitutions.isDisabledURLProtocol(RESOURCE_PROTOCOL)) {
             return null;
@@ -1040,9 +1041,13 @@ public final class Resources {
             } else {
                 host = moduleName(module);
             }
-            String authority = host != null ? "//" + (userInfo != null ? userInfo + '@' : "") + host : "";
-            return new URL(null, RESOURCE_PROTOCOL + ':' + authority + NativeImageResourceFileSystemUtil.formatRootedResourcePath(rootId, resourceName), RESOURCE_URL_STREAM_HANDLER);
-        } catch (MalformedURLException ex) {
+            // Module names are Java identifiers and need not be valid DNS hostnames.
+            String authority = host != null ? (userInfo != null ? userInfo + '@' : "") + host : null;
+            // Let URI quote characters that are illegal in individual URL components.
+            // Preserve exact Unicode sequences: canonically equivalent names can identify different resources.
+            URI uri = new URI(RESOURCE_PROTOCOL, authority, NativeImageResourceFileSystemUtil.formatRootedResourcePath(rootId, resourceName), null, null);
+            return URL.of(uri, RESOURCE_URL_STREAM_HANDLER);
+        } catch (MalformedURLException | URISyntaxException ex) {
             throw new IllegalStateException(ex);
         }
     }
